--- a/package.json
+++ b/package.json
@@ -3,17 +3,19 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "react": "15.6.1",
-    "redux": "3.7.2",
-    "marked": "0.3.6",
-    "react-dom": "15.6.1",
+    "marked": "^0.8.0",
+    "masonic": "^2.1.7",
     "prop-types": "15.5.10",
-    "superagent": "3.5.2",
+    "react": "15.6.1",
+    "react-dom": "15.6.1",
+    "react-masonry-component": "^6.2.1",
     "react-redux": "5.0.5",
     "react-router": "3.0.5",
+    "redux": "3.7.2",
+    "redux-devtools-extension": "2.13.2",
     "redux-logger": "3.0.6",
-    "superagent-promise": "1.1.0",
-    "redux-devtools-extension": "2.13.2"
+    "superagent": "3.5.2",
+    "superagent-promise": "1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
