--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "prop-types": "15.5.10",
     "react": "15.6.1",
     "react-dom": "15.6.1",
+    "react-infinite-scroll-component": "^5.0.4",
     "react-masonry-component": "^6.2.1",
+    "react-masonry-infinite": "^1.2.2",
     "react-redux": "5.0.5",
     "react-router": "3.0.5",
     "redux": "3.7.2",
     "redux-devtools-extension": "2.13.2",
     "redux-logger": "3.0.6",
-    "superagent": "3.5.2",
+    "superagent": "3.7.0",
     "superagent-promise": "1.1.0"
   },
   "scripts": {
