--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-redux-realworld",
-  "version": "0.0.0",
+  "name": "product-moor",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "marked": "^0.8.0",
