deploy status message 추가

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,3 +35,13 @@ jobs:
             --recursive \
             --region ap-northeast-2 \
             build s3://productmoor 
+          - uses: actions/checkout@v2
+      - name: Slack Notification
+        uses: rtCamp/action-slack-notify@v2.0.1
+        env:
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+          SLACK_MESSAGE: DEPLOYED SUCCESS !
+          SLACK_COLOR: '#3278BD'
+          SLACK_ICON: https://github.com/rtCamp.png?size=48
+          SLACK_TITLE: Deploy Status
+          SLACK_USERNAME: Github Actions
