--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "react-masonry-component": "^6.2.1",
     "react-masonry-infinite": "^1.2.2",
     "react-redux": "5.0.5",
-    "react-router": "3.0.5",
     "redux": "3.7.2",
     "redux-devtools-extension": "2.13.2",
     "redux-logger": "3.0.6",
     "superagent": "3.7.0",
-    "superagent-promise": "1.1.0"
+    "superagent-promise": "1.1.0",
+    "react-router": "^4.1.2",
+    "react-router-dom": "^4.1.2",
+    "react-router-redux": "^5.0.0-alpha.6"
   },
   "scripts": {
     "start": "react-scripts start",
